--- a/04_ecommerce/index.html
+++ b/04_ecommerce/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple E-Commerce</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>E-Commerce cart page</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-    <div class="container">
-        <h1>Products</h1>
-        <div id="product-list">
-            
-        </div>
+  <div class="container">
+    <h1>Products</h1>
+    <div id="product-list"></div>
 
-        <h2>Shopping Cart</h2>
-        <div id="cart-items">
-            <p id="empty-cart">Your cart is empty.</p>
-        </div>
-        <div id="cart-total" class="hidden">
-            <p>Total: <span id="total-price">0.00</span></p>
-            <button id="checkout-btn">Checkout</button>
-        </div>
+    <h2>Shopping Cart</h2>
+    <div id="cart-items">
+      <p id="empty-cart">Your cart is empty.</p>
     </div>
+    <div id="cart-total" class="hidden">
+      <p>Total: ₹<span id="total-price">0.00</span></p>
+      <button id="checkout-btn" class="btn">Checkout</button>
+    </div>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
-
 </html>
