--- a/05_expense_tracker/index.html
+++ b/05_expense_tracker/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -10,24 +10,13 @@
     <div class="container">
       <h1>Expense Tracker</h1>
       <form id="expense-form">
-        <input
-          type="text"
-          id="expense-name"
-          placeholder="Expense name"
-          required
-        />
-        <input
-          type="number"
-          id="expense-amount"
-          placeholder="Amount"
-          required
-        />
+        <input type="text" id="expense-name" placeholder="Expense name" required />
+        <input type="number" id="expense-amount" placeholder="Amount" required />
         <button type="submit">Add Expense</button>
       </form>
 
       <h2>Expenses</h2>
-      <ul id="expense-list">
-      </ul>
+      <ul id="expense-list"></ul>
 
       <div id="total">
         <h3>Total: ₹<span id="total-amount">0.00</span></h3>
